Updated phase1 Plan